# cs2-analytics

./: .gitignore  DEPLOY.md  README.md  pyproject.toml  run_ingest.sh  run_local.bat  run_server.sh  run_website.bat
.streamlit/: config.toml
server/: README.md  run_ingest.sh  run_web.sh  start.sh
src/scout/: auth.py  paths.py
src/scout/analytics/: __init__.py  gameplan.py  killcontext.py  loader.py  positions.py  stats.py  tactics.py
src/scout/ingest/: __init__.py  browser_runner.py  browser_worker.py  faceit.py  push.py  roster.py
src/scout/parse/: __init__.py  cache.py  hashing.py  parser.py
src/scout/report/: __init__.py  heatmaps.py
src/scout/server/: ingest_service.py
src/scout/ui/: app.py
src/scout/viz/: __init__.py  heatmap.py  maps.py
