[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scout"
version = "0.1.0"
description = "CS2 opponent-scouting analytics: parse HLTV/FACEIT demos, generate pre-match reports and heatmaps"
requires-python = ">=3.12"
dependencies = [
    "demoparser2>=0.30",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15",
    "matplotlib>=3.8",
    "Pillow>=10.2",
    "scipy>=1.12",
    "streamlit>=1.32",
    "requests>=2.31",
    "zstandard>=0.22",
    "PySocks>=1.7",
    "playwright>=1.40",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
server = ["fastapi>=0.110", "uvicorn>=0.27"]   # only needed on the ingest server
dev = ["pytest>=8", "ruff>=0.3"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
